# modulax

./: .gitignore  pyproject.toml
modulax/: __init__.py  abstract.py  atom.py  bond.py  compound.py
modulax/nnx/: abstract.py
tests/: run_and_update_attn.ipynb
