[tool.poetry]
name = "modulax"
version = "0.1.0"
description = ""
authors = ["jack <jack@gallabytes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.31"
tree-math = "^0.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
