[tool.poetry]
name = "modulax"
version = "0.1.0"
description = ""
authors = ["jack <jack@gallabytes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.31"
tree-math = "^0.2.1"
einx = "^0.3.0"
optax = "^0.2.3"
flax = "^0.8.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
black = "^24.8.0"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
